--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@ col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
                 While countries are at different points in their COVID-19 infection rates, worldwide there are currently more than 1.2 billion children in 186 countries affected by school closures due to the pandemic. In Denmark, children up to the age of 11 are returning to nurseries and schools after initially closing on 12 March, but in South Korea students are responding to roll calls from their teachers online. </p>
         </li>
     </ul>
-
+    <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+        <h2 id="Alumni">Alumni</h2>
+    </div>
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" data-toggle="modal" data-target="#First_Space_Encyclopaedia">
         <img id="img1" src="TR4K.jpg" class="img-responsive">
         <hr>
@@ -256,4 +258,6 @@ ramjasdayboardingschool@gmail.com?Subject=Hi">
         </div>
 
     </div>
-</body></html>
+</body>
+
+</html>
